--- a/extension-manifest-v2/package.json
+++ b/extension-manifest-v2/package.json
@@ -14,9 +14,7 @@
     "build.prod": "webpack --mode production --progress",
     "upload-sentry": "webpack --mode production --progress --devtool source-maps && ./tools/upload-sentry.sh",
     "build.watch": "webpack --mode development --progress --watch",
-    "prebuild.dev": "node ./tools/licenses/fetchLicenses.js",
-    "prebuild.prod": "node ./tools/licenses/fetchLicenses.js",
-    "prebuild.watch": "node ./tools/licenses/fetchLicenses.js",
+    "licenses": "node ../tools/licenses.js",
     "test": "jest",
     "test.watch": "jest --watch",
     "test.snapshot": "jest --updateSnapshot",
@@ -26,7 +24,7 @@
     "docs": "jsdoc -c jsdoc.json -d docs -r",
     "leet": "node ./tools/leet/leet-en.js",
     "leet.reset": "node ./tools/leet/leet-reset.js",
-    "postinstall": "patch-package && vendor-copy",
+    "postinstall": "patch-package && vendor-copy && npm run licenses",
     "locales.wtm": "hybrids extract -c --format=chrome.i18n node_modules/@whotracksme/webextension-packages/packages ./_locales/en/messages.json",
     "locales.ui": "hybrids extract -c --format=chrome.i18n node_modules/@ghostery/ui ./_locales/en/messages.json",
     "locales.src": "hybrids extract -c --format=chrome.i18n ./app ./_locales/en/messages.json",
@@ -66,7 +64,6 @@
     "prop-types": "^15.6.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-markdown": "^7.1.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-svg": "^11.0.34",
@@ -99,7 +96,6 @@
     "jest-when": "^2.7.2",
     "jsdoc": "^3.6.7",
     "jsonfile": "^6.1.0",
-    "license-checker": "^25.0.1",
     "mini-css-extract-plugin": "^2.7.2",
     "oboe": "^2.1.5",
     "os-browserify": "^0.3.0",
