--- a/.github/workflows/upload-builds-mv3.yml
+++ b/.github/workflows/upload-builds-mv3.yml
@@ -26,7 +26,13 @@ jobs:
         run: npm ci
         working-directory: .
       - name: Build packages
-        run: npm run package
+        run: npm run package -- --sha
+      - name: Upload builds
+        uses: actions/upload-artifact@v3
+        id: upload
+        with:
+          name: builds
+          path: extension-manifest-v3/web-ext-artifacts/*
       - name: Comment PR
         uses: thollander/actions-comment-pull-request@v2
         with:
