--- a/.github/workflows/artifact-upload.yml
+++ b/.github/workflows/artifact-upload.yml
@@ -6,9 +6,11 @@ on:
       - opened
       - reopened
       - synchronize
+      - labeled
 
 jobs:
   artifact-upload:
+    if: contains(github.event.pull_request.labels.*.name, 'package')
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -24,28 +26,34 @@ jobs:
         run: npm ci
         working-directory: .
       - name: Build packages
-        run: npm run package -- --sha
+        run: npm run package -- --simple
+      - name: Uncompress packages
+        run: |
+          for PLATFORM in firefox chrome edge opera; do
+            mkdir web-ext-artifacts/ghostery-$PLATFORM
+            unzip "web-ext-artifacts/ghostery-$PLATFORM.zip" -d "web-ext-artifacts/ghostery-$PLATFORM"
+          done
       - name: Upload Chrome build
         uses: actions/upload-artifact@v3
         with:
           name: Ghostery 10 for Chrome
-          path: extension-manifest-v3/web-ext-artifacts/ghostery-chrome-*
+          path: extension-manifest-v3/web-ext-artifacts/ghostery-chrome/*
           if-no-files-found: error
       - name: Upload Firefox build
         uses: actions/upload-artifact@v3
         with:
           name: Ghostery 10 for Firefox
-          path: extension-manifest-v3/web-ext-artifacts/ghostery-firefox-*
+          path: extension-manifest-v3/web-ext-artifacts/ghostery-firefox/*
           if-no-files-found: error
       - name: Upload Edge build
         uses: actions/upload-artifact@v3
         with:
           name: Ghostery 10 for Edge
-          path: extension-manifest-v3/web-ext-artifacts/ghostery-edge-*
+          path: extension-manifest-v3/web-ext-artifacts/ghostery-edge/*
           if-no-files-found: error
       - name: Upload Opera build
         uses: actions/upload-artifact@v3
         with:
           name: Ghostery 10 for Opera
-          path: extension-manifest-v3/web-ext-artifacts/ghostery-opera-*
+          path: extension-manifest-v3/web-ext-artifacts/ghostery-opera/*
           if-no-files-found: error
