Better artifact names

--- a/.github/workflows/artifact-upload.yml
+++ b/.github/workflows/artifact-upload.yml
@@ -17,6 +17,12 @@ jobs:
         working-directory: extension-manifest-v3
     steps:
       - uses: actions/checkout@v2
+      - run: |
+          SHA=$(git rev-parse --short "$GITHUB_SHA")
+          echo "SHA=$SHA" >> "$GITHUB_ENV"
+
+          VERSION=$(node -p "require('./package.json').version")
+          echo "VERSION=$VERSION" >> "$GITHUB_ENV"
       - uses: actions/setup-node@v3
         with:
           node-version-file: '.tool-versions'
@@ -36,24 +42,24 @@ jobs:
       - name: Upload Chrome build
         uses: actions/upload-artifact@v3
         with:
-          name: Ghostery 10 for Chrome
+          name: ghostery-chrome-${{ env.VERSION }}-${{ env.SHA }}
           path: extension-manifest-v3/web-ext-artifacts/ghostery-chrome/*
           if-no-files-found: error
       - name: Upload Firefox build
         uses: actions/upload-artifact@v3
         with:
-          name: Ghostery 10 for Firefox
+          name: ghostery-firefox-${{ env.VERSION }}-${{ env.SHA }}
           path: extension-manifest-v3/web-ext-artifacts/ghostery-firefox/*
           if-no-files-found: error
       - name: Upload Edge build
         uses: actions/upload-artifact@v3
         with:
-          name: Ghostery 10 for Edge
+          name: ghostery-edge-${{ env.VERSION }}-${{ env.SHA }}
           path: extension-manifest-v3/web-ext-artifacts/ghostery-edge/*
           if-no-files-found: error
       - name: Upload Opera build
         uses: actions/upload-artifact@v3
         with:
-          name: Ghostery 10 for Opera
+          name: ghostery-opera-${{ env.VERSION }}-${{ env.SHA }}
           path: extension-manifest-v3/web-ext-artifacts/ghostery-opera/*
           if-no-files-found: error
