--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,5 +23,8 @@ jobs:
       - name: Lint
         run: npm run lint
 
-      - name: Test
-        run: npm test
+      - name: Test - installated extension
+        run: npm run wdio
+
+      - name: Test - updated extension
+        run: npm run wdio:update
