--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "licenses": "license-report --config=../.license-report-config.json > dist/licenses.html",
     "lint": "eslint",
     "test": "npm run wdio",
-    "wdio": "wdio tests/wdio.conf.js",
-    "wdio:debug": "wdio tests/wdio.conf.js --debug",
+    "wdio": "wdio tests/e2e/wdio.conf.js",
+    "wdio:update": "wdio tests/e2e/wdio.update.conf.js",
     "locales:setup": "cp -f ./src/messages.json ./src/_locales/en/messages.json",
     "locales.src": "hybrids extract -c --format=chrome.i18n ./src ./src/_locales/en/messages.json",
     "locales": "npm run locales:setup && npm run locales.src",
