--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "debug": "npm run build -- --watch --debug",
     "licenses": "license-report --config=./.license-report-config.json > dist/licenses.html",
     "lint": "eslint",
-    "test": "npm run wdio",
-    "wdio": "wdio tests/wdio.conf.js",
-    "wdio:debug": "DEBUG=true npm run wdio",
+    "test": "npm run wdio && npm run wdio:update",
+    "wdio": "wdio tests/e2e/wdio.conf.js",
+    "wdio:update": "wdio tests/e2e/wdio.update.conf.js",
     "locales:setup": "cp -f ./src/messages.json ./src/_locales/en/messages.json",
     "locales.src": "hybrids extract -c --format=chrome.i18n ./src ./src/_locales/en/messages.json",
     "locales": "npm run locales:setup && npm run locales.src",
